# OOD

./: CMakeLists.txt  input.txt  main.cpp
include/: CCanvas.hpp  Constants.hpp  app.hpp
include/shapes/: CircleAdapterShape.hpp  CompositeShape.hpp  IShape.hpp  RectangleAdapterShape.hpp  ShapeMemento.hpp  TriangleAdapterShape.hpp
include/shapes/SFML/: IDrawableShape.hpp  SfmlCircle.hpp  SfmlRectangle.hpp  SfmlShape.hpp  SfmlTriangle.hpp
include/shapes/Visitor/: ColorChangeVisitor.hpp  IShapeVisitor.hpp  OutlineColorChangeVisitor.hpp  ThicknessChangeVisitor.hpp
include/tools/: IToolState.hpp
include/tools/commands/: AddShapeCommand.hpp  ChangeColorCommand.hpp  ChangeColorCommandFill.hpp  ChangeThicknessCommand.hpp  DragCommand.hpp  GroupShapesCommand.hpp  ICommand.hpp  LoadCommand.hpp  UngroupShapesCommand.hpp
include/tools/save/: BinaryShapeLoader.hpp  BinaryShapeStrategy.hpp  IShapeBuilder.hpp  IShapeStrategy.hpp  ShapeBuilder.hpp  ShapeLoader.hpp  TxtShapeLoader.hpp  TxtShapeStrategy.hpp
include/tools/states/: AddShapeState.hpp  ChangeColorShapeState.hpp  ChangeColorThickness.hpp  ChangeThicknessShapeState.hpp  DragState.hpp  IToolState.hpp  LoadBinState.hpp  LoadTxtState.hpp
include/ui/: Panel.hpp
include/ui/button/: Button.hpp
src/: app.cpp
src/Canvas/: CCanvas.cpp
src/Canvas/tools/commands/: AddShapeCommand.cpp  ChangeColorCommand.cpp  ChangeColorCommandFill.cpp  ChangeThicknessCommand.cpp  DragCommand.cpp  GroupShapesCommand.cpp  LoadCommand.cpp  UngroupShapesCommand.cpp
src/Canvas/tools/save/: BinaryShapeLoader.cpp  BinaryShapeStrategy.cpp  ShapeBuilder.cpp  ShapeLoader.cpp  TxtShapeLoader.cpp  TxtShapeStrategy.cpp
src/Canvas/tools/states/: AddShapeState.cpp  ChangeColorShapeState.cpp  ChangeColorThickness.cpp  ChangeThicknessShapeState.cpp  DragState.cpp  LoadBinState.cpp  LoadTxtState.cpp
src/Canvas/ui/: Panel.cpp
src/Canvas/ui/button/: Button.cpp
src/Shapes/: CircleAdapterShape.cpp  CompositeShape.cpp  RectangleAdapterShape.cpp  ShapeMemento.cpp  TriangleAdapterShape.cpp
src/Shapes/SFML/: SfmlCircle.cpp  SfmlRectangle.cpp  SfmlShape.tpp  SfmlTriangle.cpp
src/Shapes/Visitor/: ColorChangeVisitor.cpp  OutlineColorChangeVisitor.cpp  ThicknessChangeVisitor.cpp
